listings/ch07-managing-growing-projects/listing-07-03/output.txt
$ cargo build
   Compiling ristorante v0.1.0 (file:///progetti/ristorante)
error[E0603]: module `accoglienza` is private
 --> src/lib.rs:9:18
  |
9 |     crate::sala::accoglienza::aggiungi_in_lista();
  |                  ^^^^^^^^^^^  ----------------- function `aggiungi_in_lista` is not publicly re-exported
  |                  |
  |                  private module
  |
note: the module `accoglienza` is defined here
 --> src/lib.rs:2:5
  |
2 |     mod accoglienza {
  |     ^^^^^^^^^^^^^^^

error[E0603]: module `accoglienza` is private
  --> src/lib.rs:12:11
   |
12 |     sala::accoglienza::aggiungi_in_lista();
   |           ^^^^^^^^^^^  ----------------- function `aggiungi_in_lista` is not publicly re-exported
   |           |
   |           private module
   |
note: the module `accoglienza` is defined here
  --> src/lib.rs:2:5
   |
 2 |     mod accoglienza {
   |     ^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0603`.
error: could not compile `ristorante` (lib) due to 2 previous errors
